native/include/luaujava.h

// lua_pushboolean
// lua_pushthread
// lua_pushlightuserdatatagged
LUA_API void* luaW_newuserdatatagged(lua_State* L, size_t sz, int tag);
LUA_API void* luaW_newuserdatataggedwithmetatable(lua_State* L, size_t sz, int tag); // metatable fetched with lua_getuserdatametatable
LUA_API void* luaW_newuserdatadtor(lua_State* L, size_t sz, void (*dtor)(void*));
LUA_API void* luaW_newbuffer(lua_State* L, size_t sz);
LUA_API int luaW_gettable(lua_State* L, int idx);
LUA_API int luaW_getfield(lua_State* L, int idx, const char* k);
// lua_rawgetfield
// lua_rawget
// lua_rawgeti
// lua_rawgetptagged
LUA_API void luaW_createtable(lua_State* L, int narr, int nrec);