src/generated/java/net/hollowcube/luau/internal/vm/luawrap_h.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void *luaW_newuserdatatagged(lua_State *L, size_t sz, int tag)
     * }
     */
    public static FunctionDescriptor luaW_newuserdatatagged$descriptor() {
        return luaW_newuserdatatagged.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void *luaW_newuserdatatagged(lua_State *L, size_t sz, int tag)
     * }
     */
    public static MethodHandle luaW_newuserdatatagged$handle() {
        return luaW_newuserdatatagged.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void *luaW_newuserdatatagged(lua_State *L, size_t sz, int tag)
     * }
     */
    public static MemorySegment luaW_newuserdatatagged$address() {
        return luaW_newuserdatatagged.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void *luaW_newuserdatatagged(lua_State *L, size_t sz, int tag)
     * }
     */
    public static MemorySegment luaW_newuserdatatagged(MemorySegment L, long sz, int tag) {
        var mh$ = luaW_newuserdatatagged.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_newuserdatatagged", L, sz, tag);
            }
            return (MemorySegment)mh$.invokeExact(L, sz, tag);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_newuserdatataggedwithmetatable {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_LONG,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_newuserdatataggedwithmetatable");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void *luaW_newuserdatataggedwithmetatable(lua_State *L, size_t sz, int tag)
     * }
     */
    public static FunctionDescriptor luaW_newuserdatataggedwithmetatable$descriptor() {
        return luaW_newuserdatataggedwithmetatable.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void *luaW_newuserdatataggedwithmetatable(lua_State *L, size_t sz, int tag)
     * }
     */
    public static MethodHandle luaW_newuserdatataggedwithmetatable$handle() {
        return luaW_newuserdatataggedwithmetatable.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void *luaW_newuserdatataggedwithmetatable(lua_State *L, size_t sz, int tag)
     * }
     */
    public static MemorySegment luaW_newuserdatataggedwithmetatable$address() {
        return luaW_newuserdatataggedwithmetatable.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void *luaW_newuserdatataggedwithmetatable(lua_State *L, size_t sz, int tag)
     * }
     */
    public static MemorySegment luaW_newuserdatataggedwithmetatable(MemorySegment L, long sz, int tag) {
        var mh$ = luaW_newuserdatataggedwithmetatable.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_newuserdatataggedwithmetatable", L, sz, tag);
            }
            return (MemorySegment)mh$.invokeExact(L, sz, tag);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_newuserdatadtor {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_LONG,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_newuserdatadtor");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void *luaW_newuserdatadtor(lua_State *L, size_t sz, void (*dtor)(void *))
     * }
     */
    public static FunctionDescriptor luaW_newuserdatadtor$descriptor() {
        return luaW_newuserdatadtor.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void *luaW_newuserdatadtor(lua_State *L, size_t sz, void (*dtor)(void *))
     * }
     */
    public static MethodHandle luaW_newuserdatadtor$handle() {
        return luaW_newuserdatadtor.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void *luaW_newuserdatadtor(lua_State *L, size_t sz, void (*dtor)(void *))
     * }
     */
    public static MemorySegment luaW_newuserdatadtor$address() {
        return luaW_newuserdatadtor.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void *luaW_newuserdatadtor(lua_State *L, size_t sz, void (*dtor)(void *))
     * }
     */
    public static MemorySegment luaW_newuserdatadtor(MemorySegment L, long sz, MemorySegment dtor) {
        var mh$ = luaW_newuserdatadtor.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_newuserdatadtor", L, sz, dtor);
            }
            return (MemorySegment)mh$.invokeExact(L, sz, dtor);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_newbuffer {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_LONG
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_newbuffer");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void *luaW_newbuffer(lua_State *L, size_t sz)
     * }
     */
    public static FunctionDescriptor luaW_newbuffer$descriptor() {
        return luaW_newbuffer.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void *luaW_newbuffer(lua_State *L, size_t sz)
     * }
     */
    public static MethodHandle luaW_newbuffer$handle() {
        return luaW_newbuffer.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void *luaW_newbuffer(lua_State *L, size_t sz)
     * }
     */
    public static MemorySegment luaW_newbuffer$address() {
        return luaW_newbuffer.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void *luaW_newbuffer(lua_State *L, size_t sz)
     * }
     */
    public static MemorySegment luaW_newbuffer(MemorySegment L, long sz) {
        var mh$ = luaW_newbuffer.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_newbuffer", L, sz);
            }
            return (MemorySegment)mh$.invokeExact(L, sz);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_gettable {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_gettable");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaW_gettable(lua_State *L, int idx)
     * }
     */
    public static FunctionDescriptor luaW_gettable$descriptor() {
        return luaW_gettable.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaW_gettable(lua_State *L, int idx)
     * }
     */
    public static MethodHandle luaW_gettable$handle() {
        return luaW_gettable.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaW_gettable(lua_State *L, int idx)
     * }
     */
    public static MemorySegment luaW_gettable$address() {
        return luaW_gettable.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int luaW_gettable(lua_State *L, int idx)
     * }
     */
    public static int luaW_gettable(MemorySegment L, int idx) {
        var mh$ = luaW_gettable.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_gettable", L, idx);
            }
            return (int)mh$.invokeExact(L, idx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_getfield {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_getfield");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaW_getfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static FunctionDescriptor luaW_getfield$descriptor() {
        return luaW_getfield.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaW_getfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static MethodHandle luaW_getfield$handle() {
        return luaW_getfield.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaW_getfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static MemorySegment luaW_getfield$address() {
        return luaW_getfield.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int luaW_getfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static int luaW_getfield(MemorySegment L, int idx, MemorySegment k) {
        var mh$ = luaW_getfield.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_getfield", L, idx, k);
            }
            return (int)mh$.invokeExact(L, idx, k);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_createtable {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_createtable");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_createtable(lua_State *L, int narr, int nrec)
     * }
     */
    public static FunctionDescriptor luaW_createtable$descriptor() {
        return luaW_createtable.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_createtable(lua_State *L, int narr, int nrec)
     * }
     */
    public static MethodHandle luaW_createtable$handle() {
        return luaW_createtable.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_createtable(lua_State *L, int narr, int nrec)
     * }
     */
    public static MemorySegment luaW_createtable$address() {
        return luaW_createtable.ADDR;
    }
